--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    <link rel="stylesheet" href="css/master.css">
 
 
   </head>
   <body>
+    <div class="nav-bar"></div>
     <div id="app">
-        <h1>{{product}}</h1>
+        <div class="product">
+          <div class="product-image">
+            <img v-bind:src="image" alt="">
+          </div>
+          <div class="product-info">
+              <h1>{{product}}</h1>
+              <a :href="link">More products like this</a>
+          </div>
+
+
+        </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
       <script src="main.js"></script>
