--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link rel="stylesheet" href="css/master.css">
-
-
+    <link rel="stylesheet" href="css/master.css" />
   </head>
   <body>
     <div class="nav-bar"></div>
     <div id="app">
-        <div class="product">
-          <div class="product-image">
-            <img v-bind:src="image" alt="">
-          </div>
-          <div class="product-info">
-              <h1>{{product}}</h1>
-              <a :href="link">More products like this</a>
-          </div>
-
-
+      <div class="product">
+        <div class="product-image"><img v-bind:src="image" alt="" /></div>
+        <div class="product-info">
+          <h1>{{product}}</h1>
+          <span v-if="onSale">ON SALE!</span>
+          <p v-if="inventory > 10">In Stock</p>
+          <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out</p>
+          <p v-else>Out of Stock</p>
+          <a :href="link">More products like this</a>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-      <script src="main.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
