--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
       <div class="product">
         <div class="product-image"><img v-bind:src="image" alt="" /></div>
         <div class="product-info">
-          <h1>{{product}}</h1>
-          <span v-if="onSale">ON SALE!</span>
+          <h1>{{title}}</h1>
           <p v-if="inStock">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out</p>
           <p v-else :class="{ outOfStock: !inStock }">Out of Stock</p>
+          <p>{{sale}}</p>
           <ul>
             <li v-for="detail in details">{{detail}}</li>
           </ul>
           <div
-            v-for="variant in variants"
+            v-for="(variant, index) in variants"
             class="color-box"
             :style="{ backgroundColor: variant.variantColor }"
             :key="variant.variantId"
-            @mouseover="updateProduct(variant.variantImage)"
+            @click="updateProduct(index)"
           ></div>
           <ul>
             <li v-for="size in sizes">{{size}}</li>
